Added Github link

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                     <button class="btnOp"  >+</button>
                   </div>
             </div>
+            
         </main>
-        
+        <div class="git"><a href="https://github.com/JoshLeeK"><button class="gitbtn">Visit me on Github! - Joshua Lee Kueber</button></a></div>
         <script src="main.js" async defer></script>
     </body>
 </html>
